Updated swagger docs.
